@@ -243,9 +243,13 @@ namespace Sheepy.BattleTechMod.AttackImprovementMod {
         "If a location would become a zombie part with zero hp, make sure it is destroyed instead. Default true." ) ]
       public bool KillZeroHpLocation = true;
 
-      [ JsonComment( "Yang has improved autoloader's algorithm to balance ammo draw to minimise ammo explosion chance.  Default true." ) ]
+      [ JsonComment( "Yang has improved autoloader's algorithm to balance ammo draw to minimise ammo explosion chance.  Default true for friends." ) ]
       public bool BalanceAmmoLoad = true;
       public bool BalanceEnemyAmmoLoad = false;
+
+      [ JsonComment( "When an ammo is useless, such as because the weapon is destroyed, eject the ammo at end of turn if not prone.  Default true for friends." ) ]
+      public bool AutoJettisonAmmo = true;
+      public bool AutoJettisonEnemyAmmo = false;
 
       //
       [ JsonSection( "Logging" ) ]
