@@ -5,6 +5,7 @@ CHANGE LOG
 * Mod: Remove support code for game version 1.1.1 and before.
 * New: Show ammo count in paper doll tooltip.
 * New: Balanced ammo usage to reduce chance of ammo explosion.
+* New: Auto Jettsion Ammo when they are useless.
 
 2018-07-27 AIM Version 2.0 for BATTLETECH 1.1.2
 
